--- a/control
+++ b/control
@@ -1,7 +1,7 @@
 Package: ws.hbang.hbhackertools
 Name: hbhackertools
-Depends: adv-cmds, apt7, basic-cmds, bootstrap-cmds, bzip2, class-dump, com.a3tweaks.flipswitch, com.ericasadun.utilities, com.innoying.sbutils, com.rpetrich.rocketbootstrap, coreutils, crash-reporter, curl, cycript, developer-cmds, diffutils, diskdev-cmds, file, file-cmds, findutils, gawk, gdb, git, gzip, inetutils, iokittools, ldid, less, lsof, make, me.k3a.powersounddisabler, mobilesubstrate, nano, net.tootallnate.node, network-cmds, openssh, p7zip, patch, pincrush, pngcrush, preferenceloader, rsync, shell-cmds, subversion, system-cmds, tar, top, uikittools, unrar, unzip, vim, wget, whois, xar, xml2, zip
-Version: 1.0
+Depends: adv-cmds, apt7, basic-cmds, bootstrap-cmds, bzip2, class-dump, com.a3tweaks.flipswitch, com.ericasadun.utilities, com.innoying.sbutils, com.rpetrich.rocketbootstrap, coreutils, crash-reporter, curl, cycript, developer-cmds, diffutils, diskdev-cmds, file, file-cmds, findutils, gawk, gdb, git, gzip, inetutils, iokittools, ldid, less, lsof, make, mobilesubstrate, nano, network-cmds, openssh, p7zip, patch, pincrush, pngcrush, preferenceloader, rsync, shell-cmds, subversion, sudo, system-cmds, tar, top, uikittools, unrar, unzip, vim, wget, whois, xar, xml2, zip
+Version: 1.1
 Architecture: iphoneos-arm
 Description: Command line tools I install after jailbreaking
 Maintainer: HASHBANG Productions <support@hbang.ws>
